# aioopnsense

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aioopnsense/: __init__.py  client.py  exceptions.py
tests/: test_client.py
